css/style.css
/* ... */
.column {
	display: -webkit-flex;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-flex-direction: column;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-justify-content: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	-webkit-align-items: stretch;
	-webkit-box-align: stretch;
	-ms-flex-align: stretch;
	align-items: stretch;
}

.align-left {
	-webkit-justify-content: flex-start;
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	justify-content: flex-start;
}

.row-space > *:first-of-type {
	margin-left: 0;
}

.row > .weight25 {
	width: 25%;
}

.row > .weight75 {
	width: 75%;
}

.row-space > .weight75 {
	width: calc(75% - 1em);
}

.weight75 + .weight25 {
	margin-left: 1em;
}

.weight25 + .weight75 {
	margin-left: 1em;
}

div.center {
	display: -webkit-flex;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-flex-direction: row;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-direction: row;
	flex-direction: row;
	-webkit-justify-content: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	-webkit-align-items: center;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
}

.shrunk {
	width: 100%;
	max-width: 700px;
	margin: auto;
}

.row > * {
	width: 100%;
	padding: 1rem;
}

form .row > * {
	padding: 0;
}

@media screen and (min-width: 768px) {
	.row > * {
		width: 50%;
	}
	.row-space > * {
		width: calc(50% - 0.5em);
	}
	.row-space > *:nth-child(even) {
		margin-left: 1em;
	}
}

@media screen and (min-width: 992px) {
	.items3 > * {
		width: 33.33%;
	}
	.items3.row-space > * {
		width: calc(33.33% - 0.67em);
		margin-left: 1em;
	}
	.items3.row-space > *:nth-child(3n-2) {
		margin-left: 0;
	}
}

@media screen and (min-width: 1200px) {
	.items4 > * {
		width: 25%;
	}
	.items4.row-space > * {
		width: calc(25% - 0.75em);
		margin-left: 1em;
	}
	.items4.row-space > *:nth-child(4n-3) {
		margin-left: 0;
	}
}





/* DONATION METHOD */

#methods {
	margin: 0 0 1.5em;
}

#methods a,
#methods button {
	position: relative;
	display: -webkit-flex;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-justify-content: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	-webkit-align-items: center;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	cursor: pointer;
	height: 175px;
	width: 175px;
	margin: 16px;
	padding: 1rem;
	color: rgba(31, 31, 31, 0.7);
	font-weight: bold;
	text-align: center;
	background-color: rgba(0, 0, 0, 0.1);
	border: 6px solid rgba(0, 70, 110, 0);
	border-radius: 2px;
	box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3), 0 0 8px 0 rgba(0, 0, 0, 0.3);
	-webkit-transition: border .3s ease;
	transition: border .3s ease;
}

#methods a:hover,
#methods button:hover {
	border: 6px solid rgba(0, 70, 110, 1);
}

#methods .disabled {
	display: none;
}

#methods a > *,
#methods button > * {
	max-height: 100%;
	max-width: 100%;
	-webkit-transition: -webkit-transform .3s ease;
	transition: -webkit-transform .3s ease;
	transition: transform .3s ease;
	transition: transform .3s ease, -webkit-transform .3s ease;
}

#methods a:hover > *,
#methods button:hover > * {
	-webkit-transform: scale(1.2,1.2);
	transform: scale(1.2,1.2);
}

#methods a i,
#methods button i {
	color: #00466e;
	font-size: 500%;
}





/* FORMS */

label[for] {
	cursor: pointer;
}

form,
.form {
	display: -webkit-flex;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-flex-direction: column;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	max-width: 100%;
}

form {
	margin: 3rem auto 0;
}

.form {
	margin: 0 auto;
}

input {
	margin-bottom: 8px;
}

input[type="text"],
input[type="email"] {
	padding: .25rem;
	background-color: #fff;
	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1) inset, 0 0 4px 0 rgba(0, 0, 0, 0.1) inset;
	border: 1px solid rgba(31, 31, 31, 0.4);
	border-radius: 2px;
	-webkit-transition: background-color .3s ease, box-shadow .3s ease;
	transition: background-color .3s ease, box-shadow .3s ease;
}

input[type="text"]:focus,
input[type="email"]:focus {
	border-color: rgba(200, 0, 0, 1);
	box-shadow: 0 0 4px 0 rgba(200, 0, 0, .1) inset, 0 0 4px 0 rgba(200, 0, 0, .1) inset;
}

input[type="checkbox"] {
	position: relative;
	top: -1px;
	width: 13px;
	height: 13px;
	margin: 0 8px 0 0;
	padding: 0;
	vertical-align: bottom;
}

label {
	display: block;
	font-size: 80%;
	text-transform: uppercase;
}

label.space {
	margin: 0.6em 0 1em;
	padding-left: 15px;
	text-indent: -15px;
}

.btn {
	position: relative;
	display: block;
	z-index: 1;
	cursor: pointer;
	overflow: hidden;
	width: 300px;
	max-width: 98%;
	margin: 0.5rem auto;
	padding: .8rem;
	color: rgba(31, 31, 31, 0.7);
	font-size: 90%;
	font-weight: bold;
	text-align: center;
	text-transform: uppercase;
	background-color: rgba(0, 0, 0, .1);
	box-shadow: 0 0 4px 0 rgba(0, 0, 0, .1) inset, 0 0 4px 0 rgba(0, 0, 0, .1) inset;
	border: none;
	border-radius: 2px;
	-webkit-transition: color .3s ease;
	transition: color .3s ease;
}

.btn.btn-default {
	color: rgba(255, 255, 255, 1);
}

.btn:hover {
	color: rgba(255, 255, 255, 1);
}

.btn.btn-default:hover {
	color: rgba(31, 31, 31, 0.7);
}

.btn::after {
	content: "";
	position: absolute;
	z-index: -1;
	bottom: 0;
	left: 0;
	height: 0%;
	width: 100%;
	background-color: rgba(200, 0, 0, 1);
	-webkit-transition: height 0.3s ease 0s;
	transition: height 0.3s ease 0s;
}

.btn.btn-default::after {
	height: 100%;
}

.btn:hover::after {
	height: 100%;
}

.btn.btn-default:hover::after {
	height: 0%;
}

.grp-transfer-outer {
	display: -webkit-flex;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
}

.grp-transfer {
	margin: auto;
}
/* ... */

